--- a/ACP Website/style.css
+++ b/ACP Website/style.css
@@ -36,7 +36,7 @@
     background-size: cover;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    /* justify-content: space-around; */
 }
 .banner-title p{
     font-size: 20px;
@@ -44,6 +44,7 @@
 .banner-title{
     color: white;
     width: 43%;
+    margin-left: 18rem;
 }
 .btn1{
     border: 3px solid rgb(48, 34, 99);;
@@ -93,7 +94,7 @@
     justify-content: space-around;
     /* align-content: center; */
     align-items: center;
-    padding: 10px 0px;
+    padding: 20px 0px;
 }
 .footer-button ul{
     display: flex;
