--- a/Urbahns Development/css/style.css
+++ b/Urbahns Development/css/style.css
@@ -26,7 +26,7 @@
 }
 .banner{
     height: 110vh;
-    background-image: url("/images/carousel.png");
+    background-image: url("../images/carousel.png");
     background-size: cover;
     display: flex;
     flex-wrap: wrap;
@@ -147,7 +147,7 @@ hr{
 .contact-us{
     display: flex;
     color: grey;
-    background-image: url("/images/contact.png");
+    background-image: url("../images/contact.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
